[package]
name = "jwtool"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
description = "Encode and decode JSON web tokens"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
serde_json = "1.0.62"
structopt = "0.3.21"
