[package]
name = "jwtool"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2018"
description = "Encode and decode JSON web tokens"
readme = "README.md"
repository = "https://github.com/vivienm/jwtool.git"
license = "MIT"
build = "build.rs"

[build-dependencies]
structopt = "0.3.21"

[dependencies]
colored_json = "2.1.0"
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
serde_json = "1.0.62"
structopt = "0.3.21"
